# bevy_girk_demo

./: Cargo.toml  README.md  rustfmt.toml  wasm-build-backend.sh
bins/backend/: Cargo.toml
bins/backend/src/: main.rs
bins/client/: Cargo.toml  README.md
bins/client/src/: main.rs
bins/game_client/: Cargo.toml
bins/game_client/src/: main.rs
bins/game_instance/: Cargo.toml
bins/game_instance/src/: main.rs
bins/playtest/: Cargo.toml
bins/playtest/src/: main.rs
bins/user_client/: Cargo.toml
bins/user_client/src/: main.rs
libs/bevy_girk_demo_client_core/: Cargo.toml
libs/bevy_girk_demo_client_core/src/: lib.rs
libs/bevy_girk_demo_client_core/src/client/: client_context.rs  client_initializer.rs  mod.rs
libs/bevy_girk_demo_client_core/src/core/: mod.rs  plugin.rs  setup.rs  systems.rs  types.rs
libs/bevy_girk_demo_client_core/src/game_channel/: handle_game_incoming.rs  handle_game_incoming_impl.rs  handle_game_messages.rs  handle_game_messages_impl.rs  mod.rs
libs/bevy_girk_demo_client_core/src/player_inputs/: handle_player_client_inputs.rs  mod.rs  player_client_inputs.rs  plugin.rs
libs/bevy_girk_demo_client_skin/: Cargo.toml
libs/bevy_girk_demo_client_skin/src/: client_temp.rs  lib.rs
libs/bevy_girk_demo_client_skin/src/core/: config.rs  loading_sim.rs  mod.rs  plugin.rs
libs/bevy_girk_demo_client_skin/src/ui/: client_skin_styles.rs  game_initializing.rs  game_over.rs  loading.rs  mod.rs  plugin.rs
libs/bevy_girk_demo_client_skin/src/ui/game/: clicker.rs  disconnector.rs  header.rs  mod.rs  plugin.rs  scoreboard.rs
libs/bevy_girk_demo_game_core/: Cargo.toml
libs/bevy_girk_demo_game_core/src/: lib.rs  misc_utils.rs
libs/bevy_girk_demo_game_core/src/client/: mod.rs  player_map.rs  player_state.rs  watcher_map.rs
libs/bevy_girk_demo_game_core/src/client_channel/: client_request.rs  game_msg.rs  game_request.rs  handle_client_incoming.rs  handle_client_incoming_impl.rs  handle_client_requests.rs  handle_client_requests_impl.rs  mod.rs
libs/bevy_girk_demo_game_core/src/core/: plugin.rs  setup.rs  systems.rs  types.rs
libs/bevy_girk_demo_game_core/src/meta/: game_context.rs  game_duration_config.rs  game_initializer.rs  game_over_report.rs  mod.rs  replication.rs
libs/bevy_girk_demo_player_skin/: Cargo.toml
libs/bevy_girk_demo_player_skin/src/: client_temp.rs  lib.rs
libs/bevy_girk_demo_ui_prefab/: Cargo.toml
libs/bevy_girk_demo_ui_prefab/src/: basic_prefab_styles.rs  basic_prefabs.rs  config.rs  lib.rs  ui_utils.rs
libs/bevy_girk_demo_user_client/: Cargo.toml
libs/bevy_girk_demo_user_client/src/: client_temp.rs  config.rs  lib.rs  ui_plugin.rs  ui_section_menu_bar.rs  ui_section_play.rs
libs/bevy_girk_demo_user_client/src/core/: config.rs  mod.rs  pending_request.rs  plugin.rs
libs/bevy_girk_demo_user_client/src/game/: config_temp.rs  game_launchers.rs  game_monitor.rs  game_reconnector.rs  handle_client_instance_reports.rs  mod.rs  plugin.rs  tags.rs
libs/bevy_girk_demo_user_client/src/game/native/: local_player.rs  mod.rs  multiplayer.rs
libs/bevy_girk_demo_user_client/src/game/wasm/: local_player.rs  mod.rs  multiplayer.rs
libs/bevy_girk_demo_user_client/src/host_client/: client_button_tags.rs  connection_status.rs  handle_host_incoming.rs  handle_host_incoming_impl.rs  host_connection.rs  mod.rs  plugin.rs  tags.rs
libs/bevy_girk_demo_user_client/src/lobbies/: ack_request.rs  lobby_button_tags.rs  lobby_display.rs  lobby_page.rs  mod.rs  pending_lobby_reset.rs  plugin.rs  tags.rs  utils.rs
libs/bevy_girk_demo_user_client/src/ui/: ack_request_window.rs  connection_status.rs  game_in_progress.rs  info.rs  menu_section.rs  mod.rs  play_section.rs  plugin.rs  prefab.rs  prefab_styles.rs  user_client_styles.rs  utils.rs
libs/bevy_girk_demo_wiring/: Cargo.toml
libs/bevy_girk_demo_wiring/src/: click_lobby_checker.rs  click_lobby_contents.rs  client_app_setup.rs  client_factory.rs  game_app_setup.rs  game_client_process_launchers.rs  game_factory.rs  game_launch_pack_source.rs  host_client_config.rs  lib.rs  process_config.rs  process_launchers.rs
libs/bevy_girk_demo_wiring_backend/: Cargo.toml
libs/bevy_girk_demo_wiring_backend/src/: click_lobby_contents.rs  game_launch_pack_source.rs  host_client_config.rs  lib.rs
libs/bevy_girk_demo_wiring_client_instance/: Cargo.toml
libs/bevy_girk_demo_wiring_client_instance/src/: client_app_setup.rs  client_factory.rs  game_client_process_launchers.rs  lib.rs
libs/bevy_girk_demo_wiring_game_instance/: Cargo.toml
libs/bevy_girk_demo_wiring_game_instance/src/: game_app_setup.rs  game_factory.rs  lib.rs
libs/client_skin/: Cargo.toml
libs/client_skin/src/: fps_tracker.rs  lib.rs  loading_sim.rs  plugin.rs  state_changes.rs
libs/client_skin/src/ui/: client_skin_styles.rs  game_over.rs  loading.rs  loadscreen.rs  plugin.rs
libs/client_skin/src/ui/game/: clicker.rs  mod.rs  (+4 more)
libs/user_client/: Cargo.toml
libs/user_client/src/: lib.rs  pending_request.rs  plugin.rs  timer_configs.rs
libs/user_client/src/game/: client_starter.rs  config_temp.rs  handle_client_instance_reports.rs  local_game.rs  mod.rs  plugin.rs
libs/user_client/src/host_client/: connection_status.rs  handle_host_incoming.rs  handle_host_incoming_impl.rs  host_client_connect.rs  mod.rs  plugin.rs  tags.rs
libs/user_client/src/lobbies/: ack_request.rs  join_lobby.rs  lobby_display.rs  lobby_join_window.rs  lobby_list.rs  lobby_make_window.rs  lobby_page.rs  make_lobby.rs  mod.rs  plugin.rs  tags.rs
libs/user_client/src/ui/: ack_request_popup.rs  ack_request_window.rs  cobweb_ext.rs  game_in_progress.rs  info.rs  menu_content.rs  menu_section.rs  mod.rs  plugin.rs  popup_utils.rs  reconnecting_overlay.rs  sidebar.rs  user_client_styles.rs  utils.rs
libs/wiring_client_instance/: Cargo.toml
libs/wiring_client_instance/src/: client_app_setup.rs  client_factory.rs  game_client_process_launchers.rs  global_plugin.rs  lib.rs
libs/wiring_game_instance/: Cargo.toml
libs/wiring_game_instance/src/: client_context.rs  game_app_setup.rs  game_factory.rs  lib.rs
tests/: Cargo.toml  tests.rs
(+115 files in other folders)
