[workspace.package]
description = "Demo for bevy_girk"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.1"
edition = "2021"
keywords = ["gamedev", "multiplayer", "demo"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_girk_demo"

[workspace]
resolver = "2"
members  = [
    "bins/*",
    "libs/*",
    "tests"
]

[workspace.dependencies.bevy]
version = "0.13"
default-features = false
features = [
    # Bevy functionality:
    "bevy_asset",         # Assets management
    "bevy_scene",         # Scenes management
    #"bevy_gilrs",         # Gamepad input support
    #"bevy_audio",         # Builtin audio
    "bevy_winit",         # Window management
    "animation",          # Animation support
    "x11",                # Linux: Support X11 windowing system
    "file_watcher",       # Asset hot-reloading
    #"render",             # Graphics Rendering
    "multi-threaded",     # Allow multi-threaded system execution

    ## "render" contents
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    #"bevy_pbr",           # 3D (physically-based) rendering
    #"bevy_gizmos"         # For rendering gizmos
    #"bevy_gltf",          # GLTF 3D assets format support
    "bevy_text",          # Text/font rendering
    #"bevy_ui",            # UI toolkit

    # File formats:
    "png",
    #"hdr",
    #"vorbis",

    # Additional Bevy functionality:
    "wayland",              # Linux: Support Wayland windowing system
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize",            # Support for `serde` Serialize/Deserialize
    #"bevy_dynamic_plugin",  # Support for loading of `DynamicPlugin`s  (must use --features bevy/dynamic_linking)
    #"tonemapping_luts"      # Tonemapping lookup for KTX2 files
    #"accesskit_unix"        # AccessKit on Unix backends
    #"bevy_ci_testing"       # Support automated testing in CI

    # File formats:
    #"ktx2", # preferred format for GPU textures
    #"dds",
    #"jpeg",
    #"bmp",
    #"tga",
    #"basis-universal",
    #"zstd", # needed if using zstd in KTX2 files
    #"flac",
    #"mp3",
    #"wav",

    # Tracing for performance analysis:
    #"trace",         # Enable tracing for performance measurement
    #"wgpu_trace",    # WGPU/rendering tracing
    #"trace_tracy",   # Tracing using `tracy`
    #"trace_chrome",  # Tracing using the Chrome format
    #"detailed_trace" # Event tracing
    #"zlib"           # For KTX2 supercompression

    # Development/Debug features:
    #"dynamic_linking",       # Dynamic linking for faster compile-times (better to set this feature in the command-line)
]

[workspace.dependencies]
bevy_cobweb = { version = "0.6" }
#bevy_kot             = { version = "0.11" }
#bevy_kot_ecs         = { version = "0.11" }
#bevy_kot_misc        = { version = "0.11" }
#bevy_kot_ui          = { version = "0.11" }
#bevy_kot_utils       = { version = "0.11" }
bevy_kot = { git = "https://github.com/UkoeHB/bevy_kot", rev = "132597a" }
#bevy_kot_ecs = { git = "https://github.com/UkoeHB/bevy_kot", rev = "132597a" }
bevy_kot_misc = { git = "https://github.com/UkoeHB/bevy_kot", rev = "132597a" }
bevy_kot_ui = { git = "https://github.com/UkoeHB/bevy_kot", rev = "132597a" }
bevy_kot_utils = { git = "https://github.com/UkoeHB/bevy_kot", rev = "132597a" }

bevy_cobweb_ui = { rev = "04ea00d", git = "https://github.com/UkoeHB/bevy_cobweb_ui" }

bevy_framepace       = { version = "0.15" }
#bevy_lunex           = { version = "0.0.9" }
#bevy_lunex_core      = { version = "0.0.9" }
#bevy_lunex_ui        = { version = "0.0.9" }
bevy_lunex = { git = "https://github.com/UkoeHB/bevy-lunex", rev = "2749231" }
bevy_lunex_core = { git = "https://github.com/UkoeHB/bevy-lunex", rev = "2749231" }
bevy_lunex_ui = { git = "https://github.com/UkoeHB/bevy-lunex", rev = "2749231" }
bevy_renet2 = { git = "https://github.com/UkoeHB/renet2", rev = "fe91d62", package = "bevy_renet2" }
bevy_replicon  = { version = ">=0.26.2" }
#bevy_replicon  = { git = "https://github.com/UkoeHB/bevy_replicon", rev = "2971100" }
bevy_replicon_attributes = { version = "0.5" }
#bevy_replicon_attributes = { git = "https://github.com/UkoeHB/bevy_replicon_attributes", rev = "0f19340" }
bevy_replicon_repair = { version = ">=0.8.3" }
#bevy_replicon_repair = { git = "https://github.com/UkoeHB/bevy_replicon_repair", rev = "b0ee869" }
bevy_simplenet       = { version = "0.11", default-features = false }
iyes_progress        = { version = "0.11" , features = [ "assets" ] }

bevy_girk_backend_public    = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_client_fw         = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_client_instance   = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_game_fw           = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_game_hub_server   = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_game_instance     = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_host_server       = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_user_client_utils = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_utils             = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }
bevy_girk_wiring            = { git = "https://github.com/UkoeHB/bevy_girk", rev = "34216ae" }

clap               = { version = "4.4", default-features = false, features = [ "std" ] }
enfync             = { version = "0.1", default-features = false }
ezsockets          = { version = "0.6", default-features = false }
serde              = { version = "1.0" }
serde_json         = { version = "1.0" }
serde_with         = { version = "3.0" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url                = { version = "2.4" }
wasm-timer         = { version = "0.2" }

[profile.test]
opt-level = 0  #no optimizations for local tests

[profile.dev]
opt-level = 1  #minimal optimizations for local debug builds
debug     = true

[profile.dev.package."*"]
opt-level = 3  #maximum optimizations for dependencies used in debug builds

[profile.release]
lto           = "thin"  #link time optimizations (fast)
strip         = true    #minimize binary size with symbol stripping
codegen-units = 1       #maximize performance

[profile.release-small]
inherits = "release"
opt-level = "s"
lto = "fat"

[profile.release-small.package."*"]
opt-level = "s"
strip = true
