[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
bevy           = { workspace = true }
bevy_fn_plugin = { workspace = true }
bevy_kot       = { workspace = true }
bevy_renet     = { workspace = true }
bevy_replicon  = { workspace = true }
bevy_simplenet = { workspace = true }

enfync             = { workspace = true }
ezsockets          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
url                = { workspace = true }

bevy_girk_demo_game_core   = { path = "../libs/bevy_girk_demo_game_core" }
bevy_girk_demo_player_core = { path = "../libs/bevy_girk_demo_player_core" }
bevy_girk_demo_wiring      = { path = "../libs/bevy_girk_demo_wiring" }

[[test]]
name = "tests"
path = "tests.rs"
