[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "backend"
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.12", default-features = false }
bevy_kot_utils = { workspace = true }
bevy_simplenet = { workspace = true }
enfync         = { workspace = true }
url            = { workspace = true }

bevy_girk_backend_public  = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_hub_server = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_host_server     = { workspace = true }
bevy_girk_utils           = { workspace = true }

bevy_girk_demo_game_core = { path = "../../libs/bevy_girk_demo_game_core" }
bevy_girk_demo_wiring    = { path = "../../libs/bevy_girk_demo_wiring" }
