[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "backend"
test    = false
doctest = false

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy               = { version = "0.13", default-features = false }
bevy_kot_utils     = { workspace = true }
bevy_simplenet     = { workspace = true }
enfync             = { workspace = true }
renet              = { version  = "0.0.15" }
renetcode          = { version  = "0.0.11" }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
tracing            = { workspace = true }
url                = { workspace = true }

bevy_girk_backend_public  = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_hub_server = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_host_server     = { workspace = true }
bevy_girk_utils           = { workspace = true }

bevy_girk_demo_game_core            = { path = "../../libs/bevy_girk_demo_game_core" }
bevy_girk_demo_wiring_backend       = { path = "../../libs/bevy_girk_demo_wiring_backend" }
bevy_girk_demo_wiring_game_instance = { path = "../../libs/bevy_girk_demo_wiring_game_instance" }
