[package]
name = "client"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "client"
test    = false
doctest = false

[features]
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

[dependencies]
bevy               = { workspace = true, default-features = true }
clap               = { workspace = true, default-features = true, features = [ "derive" ] }
enfync             = { workspace = true }
bevy_simplenet     = { workspace = true, features = [ "client", "bevy" ] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
url                = { workspace = true }
wasm-timer         = { workspace = true }

bevy_girk_backend_public    = { workspace = true }
bevy_girk_client_instance   = { workspace = true }
bevy_girk_utils             = { workspace = true }

user_client    = { path = "../../libs/user_client" }
wiring_backend = { path = "../../libs/wiring_backend" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }
tracing-wasm             = { version = "0.2" }
