[package]
name = "game_client"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "game_client"
test    = false
doctest = false

[dependencies]
bevy               = { workspace = true, default-features = true }
clap               = { workspace = true, features = [ "derive" ] }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std" ] }
tracing            = { workspace = true }

bevy_girk_client_instance = { workspace = true }
bevy_girk_utils           = { workspace = true }

bevy_girk_demo_wiring_client_instance = { path = "../../libs/bevy_girk_demo_wiring_client_instance" }
