[package]
name = "game_instance"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "game_instance"
test    = false
doctest = false

[dependencies]
bevy               = { version = "0.13", default-features = false }
clap               = { workspace = true, features = [ "derive" ] }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
tracing            = { workspace = true }

bevy_girk_game_instance = { workspace = true }

bevy_girk_demo_wiring_game_instance = { path = "../../libs/bevy_girk_demo_wiring_game_instance" }
