[package]
name = "playtest"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "playtest"
test    = false
doctest = false

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy               = { version = "0.13", default-features = false }
bevy_kot_utils     = { workspace = true }
bevy_simplenet     = { workspace = true }
clap               = { workspace = true, features = [ "derive" ] }
enfync             = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
tracing            = { workspace = true }

bevy_girk_client_instance = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }

bevy_girk_demo_game_core            = { path = "../../libs/bevy_girk_demo_game_core" }
bevy_girk_demo_wiring_backend       = { path = "../../libs/bevy_girk_demo_wiring_backend" }
bevy_girk_demo_wiring_game_instance = { path = "../../libs/bevy_girk_demo_wiring_game_instance" }
