[package]
name = "user_client"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "user_client"
test    = false
doctest = false

[dependencies]
bevy           = { workspace = true, default-features = true }
clap           = { workspace = true, default-features = true, features = [ "derive" ] }
enfync         = { workspace = true }
bevy_simplenet = { workspace = true, features = [ "client", "bevy" ] }
tracing        = { workspace = true }
url            = { workspace = true }
wasm-timer     = { workspace = true }

bevy_girk_backend_public = { workspace = true }
bevy_girk_utils          = { workspace = true }

bevy_girk_demo_user_client = { path = "../../libs/bevy_girk_demo_user_client" }
bevy_girk_demo_wiring      = { path = "../../libs/bevy_girk_demo_wiring" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }
tracing-wasm             = { version = "0.2" }
