[package]
name = "user_client"
version.workspace = true
edition.workspace = true

[[bin]]
name    = "user_client"
test    = false
doctest = false

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy               = { workspace = true, default-features = true }
clap               = { workspace = true, default-features = true, features = [ "derive" ] }
enfync             = { workspace = true }
bevy_simplenet     = { workspace = true, features = [ "client", "bevy" ] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
url                = { workspace = true }
wasm-timer         = { workspace = true }

bevy_girk_backend_public    = { workspace = true }
bevy_girk_client_instance   = { workspace = true }
bevy_girk_user_client_utils = { workspace = true }
bevy_girk_utils             = { workspace = true }

bevy_girk_demo_user_client    = { path = "../../libs/bevy_girk_demo_user_client" }
bevy_girk_demo_wiring_backend = { path = "../../libs/bevy_girk_demo_wiring_backend" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }
tracing-wasm             = { version = "0.2" }
