[package]
name = "bevy_girk_demo_client_core"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.13", default-features = false }
bevy_cobweb    = { workspace = true }
bevy_fn_plugin = { workspace = true }
bevy_kot_utils = { workspace = true }
bevy_replicon  = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }

bevy_girk_client_fw = { workspace = true }
bevy_girk_game_fw   = { workspace = true }
bevy_girk_utils     = { workspace = true }

bevy_girk_demo_game_core  = { path = "../bevy_girk_demo_game_core" }
