[package]
name = "bevy_girk_demo_client_skin"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { workspace = true }
bevy_fn_plugin = { workspace = true }
bevy_framepace = { workspace = true }
bevy_kot       = { workspace = true }

bevy_girk_utils = { workspace = true }

bevy_girk_demo_client_core = { path = "../bevy_girk_demo_client_core" }
bevy_girk_demo_game_core   = { path = "../bevy_girk_demo_game_core" }
