[package]
name = "bevy_girk_demo_client_skin"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy            = { workspace = true }
bevy_cobweb     = { workspace = true }
bevy_cobweb_ui  = { workspace = true }
bevy_framepace  = { workspace = true }
bevy_kot        = { workspace = true }
bevy_kot_ui     = { workspace = true }
bevy_lunex      = { workspace = true }
bevy_lunex_core = { workspace = true }
bevy_lunex_ui   = { workspace = true }
bevy_renet2     = { workspace = true, features = ["native_transport"] }
bevy_replicon   = { workspace = true }
iyes_progress   = { workspace = true }
tracing         = { workspace = true }

bevy_girk_client_fw = { workspace = true }
bevy_girk_game_fw   = { workspace = true }
bevy_girk_utils     = { workspace = true }

bevy_girk_demo_client_core = { path = "../bevy_girk_demo_client_core" }
bevy_girk_demo_game_core   = { path = "../bevy_girk_demo_game_core" }
bevy_girk_demo_ui_prefab   = { path = "../bevy_girk_demo_ui_prefab" }
