[package]
name = "bevy_girk_demo_game_core"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.11", default-features = false }
bevy_fn_plugin = { workspace = true }
bevy_kot       = { workspace = true }
bevy_replicon  = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }

bevy_girk_game_fw = { workspace = true }
bevy_girk_utils   = { workspace = true }
