[package]
name = "bevy_girk_demo_game_core"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy                     = { version = "0.13", default-features = false }
bevy_fn_plugin           = { workspace = true }
bevy_kot_ecs             = { workspace = true }
bevy_renet               = { workspace = true }
bevy_replicon            = { workspace = true }
bevy_replicon_repair     = { workspace = true }
bevy_replicon_attributes = { workspace = true }
serde                    = { workspace = true }
tracing                  = { workspace = true }

bevy_girk_game_fw = { workspace = true }
bevy_girk_utils   = { workspace = true }
