[package]
name = "bevy_girk_demo_ui_prefab"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy             = { workspace = true }
bevy_fn_plugin   = { workspace = true }
tracing          = { workspace = true }

bevy_lunex      = { version = "0.0.9" }
bevy_lunex_core = { version = "0.0.9" }

bevy_kot_derive = { workspace = true }
bevy_kot_ecs    = { workspace = true }
bevy_kot_ui     = { workspace = true }
