[package]
name = "bevy_girk_demo_ui_prefab"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy            = { workspace = true }
bevy_kot_ecs    = { workspace = true }
bevy_kot_ui     = { workspace = true }
bevy_lunex      = { workspace = true }
bevy_lunex_core = { workspace = true }
tracing         = { workspace = true }
