[package]
name = "bevy_girk_demo_user_client"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy            = { workspace = true }
bevy_kot        = { workspace = true }
bevy_kot_ecs    = { workspace = true }
bevy_kot_ui     = { workspace = true }
bevy_fn_plugin  = { workspace = true }
bevy_framepace  = { workspace = true }
bevy_lunex      = { workspace = true }
bevy_lunex_core = { workspace = true }
bevy_simplenet  = { workspace = true, features = ["client", "bevy"] }
enfync          = { workspace = true }
serde           = { workspace = true }
tracing         = { workspace = true }

bevy_girk_backend_public = { workspace = true }
bevy_girk_game_fw        = { workspace = true }
bevy_girk_game_instance  = { workspace = true }
bevy_girk_utils          = { workspace = true }

bevy_girk_demo_game_core = { path = "../bevy_girk_demo_game_core" }
bevy_girk_demo_ui_prefab = { path = "../bevy_girk_demo_ui_prefab" }
bevy_girk_demo_wiring    = { path = "../bevy_girk_demo_wiring" }
