[package]
name = "bevy_girk_demo_wiring"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.11", default-features = false }
bevy_fn_plugin = { workspace = true }
bevy_renet     = { workspace = true }
bevy_replicon  = { workspace = true }
bevy_simplenet = { workspace = true }
iyes_progress  = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }

bevy_girk_backend_public = { workspace = true }
bevy_girk_client_fw      = { workspace = true }
bevy_girk_game_fw        = { workspace = true }
bevy_girk_game_instance  = { workspace = true }
bevy_girk_utils          = { workspace = true }
bevy_girk_wiring         = { workspace = true }

bevy_girk_demo_game_core   = { path = "../bevy_girk_demo_game_core" }
bevy_girk_demo_player_core = { path = "../bevy_girk_demo_player_core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }
