[package]
name = "bevy_girk_demo_wiring"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.12", default-features = false }
bevy_fn_plugin = { workspace = true }
bevy_kot_utils = { workspace = true }
bevy_renet     = { workspace = true }
bevy_replicon  = { workspace = true }
bevy_simplenet = { workspace = true }
iyes_progress  = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
wasm-timer     = { workspace = true }

bevy_girk_backend_public = { workspace = true }
bevy_girk_client_fw      = { workspace = true }
bevy_girk_game_fw        = { workspace = true }
bevy_girk_game_instance  = { workspace = true }
bevy_girk_utils          = { workspace = true }
bevy_girk_wiring         = { workspace = true }

bevy_girk_demo_client_core = { path = "../bevy_girk_demo_client_core" }
bevy_girk_demo_game_core   = { path = "../bevy_girk_demo_game_core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1.34"
default-features = false
features = ["io-util", "process", "macros"]
