[package]
name = "bevy_girk_demo_wiring_backend"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.13", default-features = false }
bevy_replicon  = { workspace = true }
bevy_simplenet = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }

bevy_girk_backend_public  = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }
bevy_girk_wiring          = { workspace = true }

bevy_girk_demo_wiring_game_instance = { path = "../bevy_girk_demo_wiring_game_instance" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }
