[package]
name = "bevy_girk_demo_wiring_client_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.12", default-features = false }
bevy_kot_utils = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }

bevy_girk_client_instance = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }
bevy_girk_wiring          = { workspace = true }

bevy_girk_demo_client_core          = { path = "../bevy_girk_demo_client_core" }
bevy_girk_demo_client_skin          = { path = "../bevy_girk_demo_client_skin" }
bevy_girk_demo_wiring_game_instance = { path = "../bevy_girk_demo_wiring_game_instance" }

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1.34"
default-features = false
features = ["io-util", "process", "macros"]
