[package]
name = "bevy_girk_demo_wiring_game_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy                     = { version = "0.12", default-features = false }
serde                    = { workspace = true }
bevy_replicon_attributes = { workspace = true }
bevy_simplenet           = { workspace = true }
tracing                  = { workspace = true }

bevy_girk_client_fw       = { workspace = true }
bevy_girk_client_instance = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }
bevy_girk_wiring          = { workspace = true }

bevy_girk_demo_client_core = { path = "../bevy_girk_demo_client_core" }
bevy_girk_demo_game_core   = { path = "../bevy_girk_demo_game_core" }
