[package]
name = "client_skin"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy            = { workspace = true, default-features = true }
bevy_cobweb     = { workspace = true }
bevy_cobweb_ui  = { workspace = true }
bevy_framepace  = { workspace = true }
bevy_replicon   = { workspace = true }
iyes_progress   = { workspace = true }
tracing         = { workspace = true }

bevy_girk_client_fw = { workspace = true }
bevy_girk_game_fw   = { workspace = true }
bevy_girk_utils     = { workspace = true }

client_core = { path = "../client_core" }
game_core   = { path = "../game_core" }
