[package]
name = "user_client"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy            = { workspace = true, default-features = true }
bevy_cobweb     = { workspace = true }
bevy_cobweb_ui  = { workspace = true }
bevy_framepace  = { workspace = true }
bevy_simplenet  = { workspace = true, features = ["client", "bevy"] }
enfync          = { workspace = true }
serde           = { workspace = true }
tracing         = { workspace = true }

bevy_girk_backend_public    = { workspace = true }
bevy_girk_client_instance   = { workspace = true }
bevy_girk_game_fw           = { workspace = true }
bevy_girk_game_instance     = { workspace = true }
bevy_girk_utils             = { workspace = true }

game_core              = { path = "../game_core" }
ui_prefab              = { path = "../ui_prefab" }
wiring_backend         = { path = "../wiring_backend" }
wiring_client_instance = { path = "../wiring_client_instance" }
wiring_game_instance   = { path = "../wiring_game_instance" }
