[package]
name = "wiring_client_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { workspace = true }
bevy_cobweb    = { workspace = true }
bevy_replicon  = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }

bevy_girk_client_instance = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }
bevy_girk_wiring_common   = { workspace = true }
bevy_girk_wiring_client   = { workspace = true }

client_core          = { path = "../client_core" }
client_skin          = { path = "../client_skin" }
wiring_game_instance = { path = "../wiring_game_instance" }

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1.34"
default-features = false
features = ["io-util", "process", "macros"]
